# weather-data-api

./: .gitignore  README.md  compose.yml  pyproject.toml
app/: config.py  exceptions.py  main.py
app/api/v1/: weather.py
app/middleware/: error_middleware.py  logging_middleware.py  performance_middleware.py
app/models/: weather.py
app/services/: cache_service.py  storage_service.py  weather_service.py
scripts/: create_forecast_table.py  create_tables.py
tests/fixtures/: weather_data.py
tests/unit/api/v1/: test_weather.py
tests/unit/middleware/: test_middleware.py
tests/unit/services/: test_cache_service.py  test_storage_service.py  test_weather_service.py
