# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel", "pip>=21.0"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "weather-data-api"
version = "0.1.0"
description = "Weather Data Collection and Notification API using FastAPI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
mangum = "^0.12.0"
boto3 = "^1.20.0"
python-dotenv = "^0.19.0"
aiohttp = "^3.8.1"
pydantic = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
httpx = "^0.21.0"
black = "^21.9b0"
isort = "^5.9.3"
flake8 = "^3.9.2"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function" 
